@startuml
' TODO: set the attributes that relates to other classes
' https://plantuml.com/class-diagram#631c2725deb35a73

struct ActiveObjectStaticInterface {
	QueueHandle_t& queue_into_object
	QueueHandle_t& queue_out_from_object
	TaskHandle_t& task_id
}

abstract class ActiveObject {
	+ {abstract} void loop()
}

ActiveObject --o ActiveObjectStaticInterface : # const &_interface
package "Arm FreeRTOS Task" <<Node>> {
	class Arm {
		- uint8_t _actId
		- const uint16_t* _pAngle0
		+ void loop()
	}

	class Arm_Actuator {
		+ void initialiser()
		+ void sns_read()
		+ void servo_9G(int angle)
		+ void soft_servo(int objectif)
		+ void homming()
		+ void fairePas()
		+ void closePiston()
		+ void openPiston()
		+ void goUp()
		+ void goDown()

		- PCF8575& pcf_
		+ uint8_t p9G
		+ uint8_t p17G
		+ uint8_t v1
		+ uint8_t v2
		+ uint8_t stp
		+ uint8_t dir
		+ uint8_t sns
		+ bool dir_elevator
		+ Servo servo9G
		+ Servo servo17G
		+ bool canMove
		+ int sns_status
		+ int p17G_status
		+ int p9G_status
		+ int asc_height
	}
}

Arm --* Arm_Actuator : - &_actuator

Arm --|> ActiveObject

abstract class ActiveObjectCreator {
    + {abstract} void init_active_object(ActiveObjectStaticInterface& interface, ...) 
	# TaskHandle_t start_task(...)
	# QueueHandle_t create_queue(...)
}

package "Orchestrating FreeRTOS Task" <<Node>> {
	class ArmCreator {
	    + void init_active_object(ActiveObjectStaticInterface& interface, ...) 
	}
	ArmCreator -up-|> ActiveObjectCreator
	ArmCreator --> "Arm FreeRTOS Task" : "Start the task"

	class ArmOrchestrator {
		+ void loop()
	}

	ArmOrchestrator --o ActiveObjectStaticInterface : - array<., 4> &_arms

	ArmOrchestrator --|> ActiveObject

	class ArmOrchestratorCreator {
		+ void init_active_object(ActiveObjectStaticInterface& interface, ...) 
		+ ArmOrchestrator init_arm_orchestrator(ActiveObjectStaticInterface& interface, ...) 
	}

	ArmOrchestratorCreator -up-|> ActiveObjectCreator
	ArmOrchestratorCreator --o ArmOrchestrator : Create the object in the same task 

	class ComWithRasp {
		+ void task()
	}

    ComWithRasp --* ArmOrchestrator : - &_taskLocalArmOrchestrator
    ComWithRasp --* ActiveObjectStaticInterface : - &_armOrchestratorInterface
}

package "Main FreeRTOS Task" <<Node>> {
	class CommunicatorCreator {
		+ void start_task(...)
	}
	CommunicatorCreator -up-|> ActiveObjectCreator
	CommunicatorCreator -up-> "Orchestrating FreeRTOS Task" : "Start the task" 
}

@enduml
